syntax = "proto3";

package SoulKnightProtocol;

// 枚举定义
enum RequestCode {
  RequestNone = 0;
  User = 1;
  Room = 2;
  Game = 3;
}

enum ActionCode {
  ActionNone = 0;
  Register = 1;
  Login = 2;
  CreateRoom = 3;
  JoinRoom = 4;
  FindRoom = 5;
  FindPlayer = 6;
  ExitRoom = 7;
  EnterOnlineStartRoom = 8;
  UpdatePlayerState = 9;
}

enum ReturnCode {
  ReturnNone = 0;
  Success = 1;
  Fail = 2;
  NoRoom = 3;
}

enum RoomCode {
  WaitForJoin = 0;
  Playing = 1;
  Full = 2;
}

enum HostCode {
  SelectCharacter = 0;
  WaitForStartGame = 1;
  GameStart = 2;
}

// 消息定义
message LoginPack {
  string UserName = 1;
  string Password = 2;
}

message RoomPack {
  string RoomName = 1;
  int32 CurrentNum = 2;
  int32 MaxNum = 3;
  RoomCode RoomCode = 4;
  repeated PlayerPack PlayerPacks = 5;
}

message PlayerPack {
  string PlayerName = 1;
}

message CharacterPack {
  string CharacterName = 1;
  string PlayerType = 2;
  InputPack InputPack = 3;
}

message InputPack {
  float Horizontal = 1;
  float Vertical = 2;
  float MousePosX = 3;
  float MousePosY = 4;
  float CharacterPosX = 5;
  float CharacterPosY = 6;
  bool IsAttackKeyDown = 7;
}

message MainPack {
  RequestCode RequestCode = 1;
  ActionCode ActionCode = 2;
  ReturnCode ReturnCode = 3;
  HostCode HostCode = 4;
  LoginPack LoginPack = 5;
  repeated RoomPack RoomPacks = 6;
  repeated CharacterPack CharacterPacks = 7;
  bool IsBroadcastMessage = 8;
}